--- a/package.json
+++ b/package.json
@@ -10,14 +10,22 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.8",
+    "@hookform/resolvers": "^3.9.0",
+    "@mona-health/react-input-mask": "^3.0.3",
     "@types/react-slick": "^0.23.13",
+    "aos": "^2.3.4",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.13.2",
     "lucide-react": "^0.440.0",
     "next": "14.2.10",
+    "radix-ui": "^1.0.1",
     "react": "^18",
+    "react-circle-progress-bar": "^0.1.4",
+    "react-circular-progressbar": "^2.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "react-slick": "^0.30.2",
@@ -30,6 +38,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
