--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@headlessui/react": "^2.1.8",
@@ -19,6 +20,7 @@
     "firebase": "^10.13.2",
     "lucide-react": "^0.440.0",
     "next": "14.2.10",
+    "next-sitemap": "^4.2.3",
     "radix-ui": "^1.0.1",
     "react": "^18",
     "react-circle-progress-bar": "^0.1.4",
