--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dompurify": "^3.1.7",
     "firebase": "^10.13.2",
+    "jsdom": "^25.0.1",
     "lucide-react": "^0.440.0",
     "next": "14.2.10",
     "next-sitemap": "^4.2.3",
@@ -28,6 +30,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "react-slick": "^0.30.2",
@@ -41,6 +44,7 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
