--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@headlessui/react": "^2.1.8",
     "@hookform/resolvers": "^3.9.0",
+    "@mantine/core": "^7.13.1",
+    "@mantine/hooks": "^7.13.1",
     "@mona-health/react-input-mask": "^3.0.3",
     "@types/react-slick": "^0.23.13",
     "aos": "^2.3.4",
@@ -43,6 +45,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/aos": "^3.0.7",
     "@types/dompurify": "^3.0.5",
     "@types/node": "^20",
