--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@mantine/core": "^7.13.1",
     "@mantine/hooks": "^7.13.1",
+    "@material-tailwind/react": "^2.1.10",
     "@mona-health/react-input-mask": "^3.0.3",
     "@types/react-slick": "^0.23.13",
     "aos": "^2.3.4",
@@ -22,7 +23,7 @@
     "firebase": "^10.13.2",
     "jsdom": "^25.0.1",
     "lucide-react": "^0.440.0",
-    "next": "14.2.10",
+    "next": "^14.2.10",
     "next-sitemap": "^4.2.3",
     "radix-ui": "^1.0.1",
     "react": "^18",
