--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@mantine/hooks": "^7.13.1",
     "@material-tailwind/react": "^2.1.10",
     "@mona-health/react-input-mask": "^3.0.3",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@types/react-slick": "^0.23.13",
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.13.2",
+    "he": "^1.2.0",
     "jsdom": "^25.0.1",
     "lucide-react": "^0.440.0",
     "next": "^14.2.10",
@@ -38,7 +41,7 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
     "wavesurfer.js": "^7.8.6",
@@ -48,6 +51,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/aos": "^3.0.7",
     "@types/dompurify": "^3.0.5",
+    "@types/he": "^1.2.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
