--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_BASE_URL=https://backend.decimalsolution.com/api/v1/web
+# NEXT_PUBLIC_BASE_URL=http://localhost:5000/api/v1/web
 # NEXT_PUBLIC_BASE_URL=https://4glkps52-5000.inc1.devtunnels.ms/api/v1/web
 # NEXT_PUBLIC_GOOGLE_ANALYTICS=GTM-WCRK64M5
 # NEXT_PUBLIC_BASE_URL=http://localhost:5000/api/v1/web
