--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "react-slick": "^0.30.2",
+    "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
     "wavesurfer.js": "^7.8.6",
+    "worker-loader": "^3.0.8",
     "zod": "^3.23.8"
   },
   "devDependencies": {
