Enhance sitemap generation and metadata structure across various components for improved SEO and site navigation. Added new scripts for sitemap management in package.json, updated metadata in layout, about, blogs, careers, contact, products, services, and portfolio pages to include comprehensive descriptions and keywords.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "next build ",
     "start": "next start",
     "lint": "next lint",
-    "postbuild": "next-sitemap"
+    "postbuild": "next-sitemap",
+    "sitemap": "node scripts/generate-sitemap.js",
+    "sitemap:advanced": "node scripts/advanced-sitemap-generator.js",
+    "sitemap:test": "./scripts/test-sitemap.sh",
+    "sitemap:setup": "./scripts/setup-sitemap-cron.sh"
   },
   "dependencies": {
     "@headlessui/react": "^2.1.8",
